[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "truthprobe"
version = "0.2.0"
description = "AI API Trust & Cost Transparency SDK — Audit your LLM relay providers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "TruthProbe", email = "hello@truthprobe.com" },
]
keywords = ["ai", "llm", "api", "audit", "cost", "openai", "claude", "finops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.scripts]
truthprobe = "truthprobe.cli:main"

[project.urls]
Homepage = "https://truthprobe.com"
Repository = "https://github.com/LuisHF1998/truthprobe-python"
Documentation = "https://truthprobe.com/docs"
